# unmo3

./: 16to8.c  CMakeLists.txt  Makefile  README.md  README.txt  dannyelf_ll.mo3  demo.sh  endian_macros.h  mo3_mp3.c  mo3_mp3.h  mo3_parse.c  mo3_parse.h  mo3_unpack.c  mo3_unpack.h  unmo3.1  unmo3.c  unmo3.vcproj
spec/: demo.txt  index.html  it.txt  mtm-efx.txt  mtm.txt  xm.txt  xm_errata.txt
